--- a/style.css
+++ b/style.css
@@ -1,20 +1,6 @@
 
 
 
-:root {
-    --txt-grey: #828184;
-    --txt-white: #FFFFFF;
-    --txt-red: #E84A34;
-    --txt-green: #89EB79;
-}
-
-body {
-    background-color: #110F17;
-    font-family: "ADLaM Display", serif;
-    margin: 0;
-    padding: 0;
-}
-
 #contentWallet {
     display: flex;
     flex-direction: column;
@@ -31,11 +17,6 @@ body {
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5); /* Sombreamento */
 }
 
-.txtTitle {
-    color: var(--txt-grey);
-    font-size: 1rem;
-    transition: all 0.3s ease; /* Transições suaves */
-}
 
 #stats {
     margin-top: 7vh;
@@ -51,9 +32,6 @@ body {
     line-height: 1vh;
 }
 
-.white {
-    color: var(--txt-white);
-}
 
 .red {
     color: var(--txt-red);
@@ -65,7 +43,7 @@ body {
 
 .txtMoney {
     font-size: 1rem;
-    transition: all 0.3s ease; /* Transições suaves */
+
 }
 #addDespesa
 {
@@ -76,38 +54,16 @@ body {
     flex-direction: column;
     
 }
-.btnCadastrar
-{
-    text-align: center;
-    font-size: 1rem;
-    background-color: #CBE012;
-    border: none;
-    font-family: "ADLaM Display", serif;
-    border-radius: 1vh;
-    min-height: 8vh;
-    width: 25vh;
-}
 .item-Transaction
 {
     display: flex;
     align-items: center;
-    justify-content:space-between;
+    justify-content:space-around;
 }
 .list-Transaction
 {
     margin-top: -1vh;
     margin-right: 6vh;
-}
-.item-Img
-{
-    background-color: #E84A34;
-    min-height: 6vh;
-    width:6vh;
-    border-radius: 100%;
-}
-.item-Price
-{
-    color: var(--txt-grey);
 }
 #seeMore
 {
